--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "ts-node server.ts --ignore-watch node_modules"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
