--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
       "prettier"
   ],
   "rules": {
-      "prettier/prettier": "error",
+    "prettier/prettier": "error",
+    "import/no-import-module-exports": "off",
     "camelcase": "off",
     "import/no-unresolved": "error",
     "@typescript-eslint/naming-convention": [
