--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node server.ts --ignore-watch node_modules"
+    "dev": "ts-node server.ts --inspect --transpile-only --ignore-watch node_modules --respawn"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
