--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node server.ts --inspect --transpile-only --ignore-watch node_modules --respawn"
+    "dev": "npx ts-node-dev server.ts"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
 }
