--- a/.config.env
+++ b/.config.env
@@ -1,4 +1,7 @@
 NODE_ENV=development
 PORT=4007
-USERNAME=marcos
-PASSWORD=123456
+DATABASE=mongodb+srv://natours_dev:<PASSWORD>@cluster.fend4.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=269142
+
+
