--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npx ts-node-dev server.ts"
+    "dev": "npx ts-node-dev src/server.ts"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/mongoose-geojson-schema": "^2.1.5",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
