--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,9 @@
   "rules": {
     "prettier/prettier": "error",
     "import/no-import-module-exports": "off",
+    "no-return-assign":"off",
     "camelcase": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "func-names":"off",
     "import/no-unresolved": "error",
     "@typescript-eslint/naming-convention": [
