--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
     "dev": "npx ts-node-dev src/server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.6",
-    "morgan": "^1.10.0"
+    "mongoose-query-parser": "^1.2.1",
+    "morgan": "^1.10.0",
+    "object-typed": "^0.1.0",
+    "qs": "^6.10.3",
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-geojson-schema": "^2.1.5",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
