--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "deleted:data": "ts-node-dev dev-data/data/import-dev-data.ts --delete"
   },
   "dependencies": {
+    "@types/express-mongo-sanitize": "^2.1.0",
+    "@types/hpp": "^0.2.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "mongoose-query-parser": "^1.2.1",
@@ -26,6 +32,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
